src/components/Dialog/styles.css
.inner {
  margin: 1px;
  border: 4px solid black;
  border-radius: 4px;
  background: white;
  padding: calc(20px * var(--scale));
  line-height: calc(25px * var(--scale));
}

.conversation {
  display: flex;
  align-items: flex-start;
  height: 100%;
  cursor: pointer;
}

.portrait {
  width: calc(60px * var(--scale));
  height: calc(60px * var(--scale));
  object-fit: contain;
  flex-shrink: 0;
  margin-right: calc(16px * var(--scale));
}

.textBlock {
  flex: 1;
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.speakerName {
  font-weight: bold;
  margin-bottom: calc(4px * var(--scale));
  flex-shrink: 0;
}

.speakerText {
  flex: 1;
  overflow: hidden;
}

.outer {
  position: relative;
  height: calc(100px * var(--scale));
  background: white;

  .inner {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }
}

